force-app/main/default/objects/Subscriptions__c/Subscriptions__c.object-meta.xml
<CustomObject>
    <label>Subscription</label>
    <nameField>
        <label>Subscription ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>