force-app/main/default/objects/Subscriptions__c/fields/AddressValidationStatus__c.field-meta.xml
<CustomField>
    <fullName>AddressValidationStatus__c</fullName>
    <label>AddressValidationStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be verify</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>