force-app/main/default/objects/Subscriptions__c/fields/Agent_Office_Phone__c.field-meta.xml
<CustomField>
    <fullName>Agent_Office_Phone__c</fullName>
    <label>Agent Office Phone</label>
    <type>Phone</type>
</CustomField>