force-app/main/default/objects/Subscriptions__c/fields/AgentKey__c.field-meta.xml
<CustomField>
    <fullName>AgentKey__c</fullName>
    <externalId>true</externalId>
    <label>MRIS Agent Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>