force-app/main/default/objects/Subscriptions__c/fields/AgentRealPingID__c.field-meta.xml
<CustomField>
    <fullName>AgentRealPingID__c</fullName>
    <label>AgentRealPingID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>