force-app/main/default/objects/Subscriptions__c/fields/Alternate_Private_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Private_Email__c</fullName>
    <description>subscribers can store another private email address</description>
    <label>Alternate Private Email</label>
    <type>Email</type>
</CustomField>