force-app/main/default/objects/Subscriptions__c/fields/ApplicationNotificationOptOut__c.field-meta.xml
<CustomField>
    <fullName>ApplicationNotificationOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt Out of Application Notification</label>
    <type>Checkbox</type>
</CustomField>