force-app/main/default/objects/Subscriptions__c/fields/Billing_Box__c.field-meta.xml
<CustomField>
    <fullName>Billing_Box__c</fullName>
    <label>Home Box #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>