force-app/main/default/objects/Subscriptions__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <label>Home City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>