force-app/main/default/objects/Subscriptions__c/fields/Billing_County__c.field-meta.xml
<CustomField>
    <fullName>Billing_County__c</fullName>
    <label>CS_Home County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>