force-app/main/default/objects/Subscriptions__c/fields/Billing_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Billing_Jurisdiction__c</fullName>
    <label>Billing Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRIGHT</fullName>
            </value>
            <value>
                <fullName>CURE</fullName>
            </value>
            <value>
                <fullName>MRIS</fullName>
            </value>
            <value>
                <fullName>TREND</fullName>
            </value>
            <value>
                <fullName>RAYAC</fullName>
            </value>
            <value>
                <fullName>Lebanon</fullName>
            </value>
            <value>
                <fullName>Lancaster</fullName>
            </value>
            <value>
                <fullName>GHAR</fullName>
            </value>
            <value>
                <fullName>Sussex</fullName>
            </value>
            <value>
                <fullName>Coastal</fullName>
            </value>
            <value>
                <fullName>Cumberland NJ</fullName>
            </value>
            <value>
                <fullName>Schuylkill</fullName>
            </value>
            <value>
                <fullName>JSMLS</fullName>
            </value>
            <value>
                <fullName>Courtesy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>