force-app/main/default/objects/Subscriptions__c/fields/Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period__c</fullName>
    <formula>TEXT(Related_Location_Broker_Office__r.Billing_Period__c)</formula>
    <label>Billing Period</label>
    <type>Text</type>
</CustomField>