force-app/main/default/objects/Subscriptions__c/fields/Billing_Street_Direction__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Direction__c</fullName>
    <label>CS_Home Street Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SW, SOUTHWEST</fullName>
            </value>
            <value>
                <fullName>N, NORTH</fullName>
            </value>
            <value>
                <fullName>SE, SOUTHEAST</fullName>
            </value>
            <value>
                <fullName>E, EAST</fullName>
            </value>
            <value>
                <fullName>S, SOUTH</fullName>
            </value>
            <value>
                <fullName>NE, NORTHEAST</fullName>
            </value>
            <value>
                <fullName>W, WEST</fullName>
            </value>
            <value>
                <fullName>NW, NORTHWEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>