force-app/main/default/objects/Subscriptions__c/fields/Billing_Street_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Suffix__c</fullName>
    <label>Home Street Suffix</label>
    <length>40</length>
    <type>Text</type>
</CustomField>