force-app/main/default/objects/Subscriptions__c/fields/Billing_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Unit_Type__c</fullName>
    <label>CS_Home Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FRNT, FRONT</fullName>
            </value>
            <value>
                <fullName>SLIP, SLIP</fullName>
            </value>
            <value>
                <fullName>BLDG, BUILDING</fullName>
            </value>
            <value>
                <fullName>#, #</fullName>
            </value>
            <value>
                <fullName>PIER, PIER</fullName>
            </value>
            <value>
                <fullName>KEY, KEY</fullName>
            </value>
            <value>
                <fullName>APT, APARTMENT</fullName>
            </value>
            <value>
                <fullName>DEPT#, DEPARTMENT #</fullName>
            </value>
            <value>
                <fullName>LBBY, LOBBY</fullName>
            </value>
            <value>
                <fullName>SU, SUITE</fullName>
            </value>
            <value>
                <fullName>BLDG#, BUILDING #</fullName>
            </value>
            <value>
                <fullName>OFC#, OFFICE #</fullName>
            </value>
            <value>
                <fullName>FLR, FLOOR</fullName>
            </value>
            <value>
                <fullName>LOWR, LOWER</fullName>
            </value>
            <value>
                <fullName>UNIT, UNIT</fullName>
            </value>
            <value>
                <fullName>PH, PENTHOUSE</fullName>
            </value>
            <value>
                <fullName>SIDE, SIDE</fullName>
            </value>
            <value>
                <fullName>UNIT, UNIT #</fullName>
            </value>
            <value>
                <fullName>RM, ROOM</fullName>
            </value>
            <value>
                <fullName>STE#, SUITE #</fullName>
            </value>
            <value>
                <fullName>RM#, ROOM #</fullName>
            </value>
            <value>
                <fullName>DEPT, DEPARTMENT</fullName>
            </value>
            <value>
                <fullName>BSMT, BASEMENT</fullName>
            </value>
            <value>
                <fullName>REAR, REAR</fullName>
            </value>
            <value>
                <fullName>SPC, SPACE</fullName>
            </value>
            <value>
                <fullName>STE, SUITE</fullName>
            </value>
            <value>
                <fullName>APT#, APARTMENT #</fullName>
            </value>
            <value>
                <fullName>TRLR, TRAILER</fullName>
            </value>
            <value>
                <fullName>LOT, LOT</fullName>
            </value>
            <value>
                <fullName>UPPR, UPPER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>