force-app/main/default/objects/Subscriptions__c/fields/Billing_Zip_4__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_4__c</fullName>
    <label>Home Zip+4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>