force-app/main/default/objects/Subscriptions__c/fields/BILLINGCYCLE__c.field-meta.xml
<CustomField>
    <fullName>BILLINGCYCLE__c</fullName>
    <formula>IF(AND(Primary__c =True, MONTH (Date_Billing_Begins__c )=1), &quot;QSFC1&quot;,
IF(AND(Primary__c =True, MONTH (Date_Billing_Begins__c )=2), &quot;QSFC2&quot;,
IF(AND(Primary__c =True, MONTH (Date_Billing_Begins__c )=3), &quot;QSFC3&quot;,
IF (AND(Primary__c =True, MONTH (Date_Billing_Begins__c )=4), &quot;QSFC1&quot;,
IF (AND(Primary__c =True, MONTH (Date_Billing_Begins__c )=5), &quot;QSFC2&quot;,
IF (AND(Primary__c =True, MONTH (Date_Billing_Begins__c )=6), &quot;QSFC3&quot;,
IF (AND(Primary__c =True, MONTH (Date_Billing_Begins__c )=7),&quot;QSFC1&quot;,
IF (AND(Primary__c =True, MONTH (Date_Billing_Begins__c )=8), &quot;QSFC2&quot;,
IF (AND(Primary__c =True, MONTH (Date_Billing_Begins__c )=9), &quot;QSFC3&quot;,
IF (AND (Primary__c =True, MONTH (Date_Billing_Begins__c )=10),&quot;QSFC1&quot;,
IF (AND(Primary__c =True, MONTH (Date_Billing_Begins__c )=11), &quot;QSFC2&quot;,
IF (AND (Primary__c =True, MONTH (Date_Billing_Begins__c )=12), &quot;QSFC3&quot;,
null
))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BILLINGCYCLE</label>
    <type>Text</type>
</CustomField>