force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_Agent_Key__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_Agent_Key__c</fullName>
    <label>BRIGHT Agent Key</label>
    <length>250</length>
    <type>Text</type>
</CustomField>