force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_AgreementAcceptanceDate__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_AgreementAcceptanceDate__c</fullName>
    <label>Bright Agreement Acceptance Date</label>
    <type>DateTime</type>
</CustomField>