force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_ConversionDeploymentGroup__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_ConversionDeploymentGroup__c</fullName>
    <label>Onboarding Deployment Group</label>
    <length>15</length>
    <type>Text</type>
</CustomField>