force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_ConversionFreezeDate__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_ConversionFreezeDate__c</fullName>
    <description>The date in the future which he cannot access their MLS anymore.</description>
    <label>Conversion Freeze Date</label>
    <type>Date</type>
</CustomField>