force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_ConversionIsInPreview__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_ConversionIsInPreview__c</fullName>
    <formula>IF( 
AND( 
BRIGHT_ConversionPreviewDate__c &lt;= TODAY(), 
OR( 
OR( 
ISBLANK(BRIGHT_ConversionPerformanceDate__c), 
ISNULL(BRIGHT_ConversionPerformanceDate__c) 
), 
BRIGHT_ConversionPerformanceDate__c &gt; TODAY() 
) 
), 
TRUE, 
FALSE 
)</formula>
    <label>In Preview</label>
    <type>Checkbox</type>
</CustomField>