force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_ConversionPerformanceDate__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_ConversionPerformanceDate__c</fullName>
    <description>Date officially converted.  Not filled until until converted.</description>
    <label>Conversion Date</label>
    <type>Date</type>
</CustomField>