force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_ConversionPrevDeploymentGroup__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_ConversionPrevDeploymentGroup__c</fullName>
    <label>Previous Conversion Deployment</label>
    <length>20</length>
    <type>Text</type>
</CustomField>