force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_ConversionPreviewDate__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_ConversionPreviewDate__c</fullName>
    <description>The date in the future which the member&apos;s preview will start in Bright.</description>
    <label>Conversion Preview Date</label>
    <type>Date</type>
</CustomField>