force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_ConversionProductionDate__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_ConversionProductionDate__c</fullName>
    <description>Date in future when the member is expected to be fully converted.</description>
    <label>Conversion Production Date</label>
    <type>Date</type>
</CustomField>