force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_ConversionSourceMLS__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_ConversionSourceMLS__c</fullName>
    <label>Conversion Source MLS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>