force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_ConversionSourceStatus__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_ConversionSourceStatus__c</fullName>
    <label>Conversion Source Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>