force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_ConversionSourceSubtype__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_ConversionSourceSubtype__c</fullName>
    <label>Conversion Source Subtype</label>
    <length>100</length>
    <type>Text</type>
</CustomField>