force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_ConversionSourceType__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_ConversionSourceType__c</fullName>
    <label>Conversion Source Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>