force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_ConversionTransitDate__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_ConversionTransitDate__c</fullName>
    <label>Conversion Group Change Date</label>
    <type>Date</type>
</CustomField>