force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_CS_Status_ID__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_CS_Status_ID__c</fullName>
    <label>BRIGHT CS Status ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>