force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_HiddenPreviewEndDate__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_HiddenPreviewEndDate__c</fullName>
    <label>Hidden Preview End Date</label>
    <type>DateTime</type>
</CustomField>