force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_HiddenPreviewStartDate__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_HiddenPreviewStartDate__c</fullName>
    <label>Hidden Preview Start Date</label>
    <type>DateTime</type>
</CustomField>