force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_IsConverted__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_IsConverted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A true false field to hold the state of the subscription conversion to BRIGHT.</description>
    <label>BRIGHT_IsConverted</label>
    <type>Checkbox</type>
</CustomField>