force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_IsInHiddenPreview__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_IsInHiddenPreview__c</fullName>
    <formula>IF( 
  AND( 
    BRIGHT_HiddenPreviewStartDate__c &lt;= NOW(), 
      OR( 
        OR( 
          ISBLANK(BRIGHT_HiddenPreviewEndDate__c),
          ISNULL(BRIGHT_HiddenPreviewEndDate__c) 
        ), 
       BRIGHT_HiddenPreviewEndDate__c &gt; NOW()) 
     ), 
   TRUE, 
   FALSE 
)</formula>
    <label>Is In Hidden Preview</label>
    <type>Checkbox</type>
</CustomField>