force-app/main/default/objects/Subscriptions__c/fields/BRIGHT_LoginName__c.field-meta.xml
<CustomField>
    <fullName>BRIGHT_LoginName__c</fullName>
    <label>BRIGHT_LoginName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>