force-app/main/default/objects/Subscriptions__c/fields/BusinessRelationship__c.field-meta.xml
<CustomField>
    <fullName>BusinessRelationship__c</fullName>
    <label>Business Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fox and Roach Public Records Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>