force-app/main/default/objects/Subscriptions__c/fields/Contact_Nickname__c.field-meta.xml
<CustomField>
    <fullName>Contact_Nickname__c</fullName>
    <formula>BLANKVALUE(Contact__r.Nickname__c,Contact__r.FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact_Nickname</label>
    <type>Text</type>
</CustomField>