force-app/main/default/objects/Subscriptions__c/fields/Copy_Address_to_Billing__c.field-meta.xml
<CustomField>
    <fullName>Copy_Address_to_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this and when the record is saved, all Mailing Address fields will be copied to corresponding Billing Address fields</inlineHelpText>
    <label>Copy Address to Home</label>
    <type>Checkbox</type>
</CustomField>