force-app/main/default/objects/Subscriptions__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>CS_Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UNITED STATES OF AMERICA</fullName>
                <default>true</default>
                <label>UNITED STATES OF AMERICA</label>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>UNKNOWN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>