force-app/main/default/objects/Subscriptions__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>CS_County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>