force-app/main/default/objects/Subscriptions__c/fields/CS_Status_ID__c.field-meta.xml
<CustomField>
    <fullName>CS_Status_ID__c</fullName>
    <label>MRIS CS Status ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>