force-app/main/default/objects/Subscriptions__c/fields/CUSTOMERADDRESSID__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMERADDRESSID__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CUSTOMERADDRESSID</label>
    <type>Text</type>
</CustomField>