force-app/main/default/objects/Subscriptions__c/fields/CUSTOMERADDRESSLINE1__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMERADDRESSLINE1__c</fullName>
    <formula>LEFT(Billing_Street_Number__c &amp;&quot; &quot;&amp; Billing_Street_Name__c &amp;&quot; &quot;&amp;TEXT( Billing_Street_Type__c)&amp;&quot; &quot;&amp;  Billing_Street_Suffix__c &amp;&quot; &quot;&amp; TEXT(Billing_Street_Direction__c),40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CUSTOMERADDRESSLINE1</label>
    <type>Text</type>
</CustomField>