force-app/main/default/objects/Subscriptions__c/fields/CUSTOMERADDRESSLINE2__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMERADDRESSLINE2__c</fullName>
    <formula>LEFT(TEXT(Billing_Unit_Type__c)&amp;&quot; &quot;&amp; Billing_Unit_Number__c &amp;&quot; &quot;&amp; Billing_Box__c &amp;&quot; &quot;&amp; Billing_Addl_Display_Name__c,40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CUSTOMERADDRESSLINE2</label>
    <type>Text</type>
</CustomField>