force-app/main/default/objects/Subscriptions__c/fields/CUSTOMERCELLPHONE__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMERCELLPHONE__c</fullName>
    <formula>SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE( SUBSTITUTE(  Contact__r.MobilePhone , &quot;)&quot;, &quot;&quot; ), &quot;-&quot;, &quot;&quot; ), &quot;+&quot;, &quot;&quot; ), &quot; &quot;, &quot;&quot; ), &quot;(&quot;, &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CUSTOMERCELLPHONE</label>
    <type>Text</type>
</CustomField>