force-app/main/default/objects/Subscriptions__c/fields/CUSTOMERCLASS__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMERCLASS__c</fullName>
    <formula>CASE(  Subscription_Type__c,
&quot;Association Staff&quot;,  &quot;Association Staff&quot;, 
&quot;Broker Staff&quot;,  &quot;Broker Staff&quot;,  
&quot;Government Agency&quot;,&quot;Government Agency&quot;,
&quot;Government Agency - N/C&quot;,  &quot;Government Agency - N/C&quot;,    
&quot;Government Agency/PA - N/C&quot;,    &quot;Government Agency/PA - N/C&quot;,
&quot;Government Agency/Personal Assistant&quot;,  &quot;Government Agency/Personal Assistant&quot;,  
&quot;Licensed Appraiser/Non Realtor&quot;, &quot;AppNonShr&quot;,
&quot;Licensee&quot;, &quot;Licensee&quot;, 
&quot;Licensee/Non Realtor&quot;,&quot;LicAgNonShr&quot;,
&quot;MRIS Consultant&quot;,&quot;MRIS Consultant&quot;,
&quot;MRIS Manager&quot;, &quot;MRIS Manager&quot;, 
&quot;MRIS Staff&quot;, &quot;MRIS Staff&quot;,
&quot;MRIS Vendor&quot;, &quot;MRIS Vendor&quot;,
&quot;Non-Subscribing Consultant&quot;, &quot;Non-Subscribing Consultant&quot;, 
&quot;Non-Subscribing Manager&quot;, &quot;Non-Subscribing Manager&quot;,
&quot;Office Secretary&quot;,&quot;OfcSec&quot;,
&quot;Office Secretary - NC&quot;,&quot;OfcSecNC&quot;,
&quot;Personal Assistant&quot;,&quot;PA&quot;,
&quot;Personal Assistant to Appraiser&quot;,&quot;PA&quot;,
&quot;Realtor/Appraiser Non Shareholder&quot;,&quot;AppNonShr&quot;,
&quot;Realtor/Appraiser Shareholder&quot;,&quot;AppShr&quot;,
&quot;Realtor/Non Shareholder&quot;,&quot;RltrNonShr&quot;,
&quot;Realtor/Shareholder&quot;,&quot;RltrShr&quot;,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CUSTOMERCLASS</label>
    <type>Text</type>
</CustomField>