force-app/main/default/objects/Subscriptions__c/fields/CUSTOMERNAME__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMERNAME__c</fullName>
    <formula>Contact__r.FirstName &amp;&quot; &quot;&amp; Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CUSTOMERNAME</label>
    <type>Text</type>
</CustomField>