force-app/main/default/objects/Subscriptions__c/fields/CUSTOMERPOSTALCODE__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMERPOSTALCODE__c</fullName>
    <formula>IF( 
AND (NOT (ISBLANK(Billing_Zip__c)),NOT(ISBLANK(Billing_Zip_4__c))),
Billing_Zip__c &amp;&quot;-&quot;&amp; Billing_Zip_4__c,

IF(
AND (NOT (ISBLANK(Billing_Zip__c)),ISBLANK(Billing_Zip_4__c)),
Billing_Zip__c,

IF(
AND (ISBLANK(Billing_Zip__c),ISBLANK(Billing_Zip_4__c)),
null,

IF( 
AND (ISBLANK(Billing_Zip__c),NOT(ISBLANK(Billing_Zip_4__c))), 
&quot;00000-&quot;&amp; Billing_Zip_4__c, 

null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CUSTOMERPOSTALCODE</label>
    <type>Text</type>
</CustomField>