force-app/main/default/objects/Subscriptions__c/fields/CUSTOMERREFERENCE__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMERREFERENCE__c</fullName>
    <formula>IF (
Primary__c = True,
&quot;NO DUPE&quot;,
TEXT( Contact__r.PrimarySubIDRollup__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CUSTOMERREFERENCE</label>
    <type>Text</type>
</CustomField>