force-app/main/default/objects/Subscriptions__c/fields/Date_Billing_Begins__c.field-meta.xml
<CustomField>
    <fullName>Date_Billing_Begins__c</fullName>
    <defaultValue>IF( 
MONTH(Today())=12, 
DATEVALUE(TEXT(YEAR(Today())+1)+&quot;-01-01&quot;), 
DATEVALUE(TEXT(YEAR(Today()))+&quot;-&quot;+TEXT(MONTH(Today())+1)+&quot;-01&quot;) 
) 

/*IF
( 
DAY(Today())=1,Today(),

    DATEVALUE
    (
     TEXT(YEAR(Today()))+&quot;-&quot;+
     IF(MONTH(Today())=12,&quot;01&quot;,TEXT(MONTH(Today())+1))+
      &quot;-01&quot;
     )

)*/</defaultValue>
    <label>Date Billing Begins</label>
    <type>Date</type>
</CustomField>